--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,6 @@
 				float: left;
 				
 			}
-body{width:1920;}
 			a{text-decoration: none;}
 			 #top ul li a{
 				
@@ -33,18 +32,22 @@ body{width:1920;}
 				font-weight: bolder;
 			}
 			.ebt{
-				color: #1E90FF;
+				color: #1E90FF;				
 			}
+			.easy{width:1100px;}
+			.fl{width:1920;height: 490px;overflow:hidden;}
+			.sp{width:825px;height: 400px;}
 			.sp1{
-				width: 22%;height: 100%;float: left;margin-right: 20px;
+				width:186px;height:200px;float: left;margin-right: 20px;
 			}
 			.sp2{
-				width: 100%;height: 50%;background-color:#1E90FF ;
+				width: 100%;height: 105px;background-color:#1E90FF ;
 				background-image: url(../img/图一.png);
 			}
 			.sp3{
 				width: 100%;height: 50%;color: #c0c0c0;background-color: white;
 			}
 			.sp4{width: 100px;height:20px;border: 1px solid;}
+			.sp5{position: relative;bottom: 0px;}
 			.sp3:hover{background-color: #fffaf0;}
 			.sp4:hover{background-color:#1E90FF; }
