--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,18 @@
-	div{
+           *{
 				margin: 0;padding: 0;border: 0px;
 			}
+			#top ul{width: 897px;height:60px;float: right;}
 			#top ul li{
 				list-style: none;
-				float: left;
-				
+				float:left;	
+				margin-top:20px;			
 			}
 			a{text-decoration: none;}
 			 #top ul li a{
 				
 				color:white;
-				padding: 15px 10px 13px 10px;
-				margin: 0px 10px 0 10px;
-				
+				padding: 15px 12px 15px 12px;
+				margin-left:18px	
 			}
 			#top ul li a:hover{
 				background-color: #1E90FF;
