--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,21 @@
            *{
 				margin: 0;padding: 0;border: 0px;
 			}
-#top{overflow:hidden;}
-			#top ul{width: 897px;height:60px;float: right;}
+			#top{overflow: hidden;}
+			#top ul{width: 897px;height:60px;float: right; }
 			#top ul li{
 				list-style: none;
 				float:left;	
-				margin-top:20px;			
+				/* display: inline;*/						
 			}
 			a{text-decoration: none;}
 			 #top ul li a{
 				
 				color:white;
 				padding: 15px 12px 15px 12px;
-				margin-left:18px	
+				margin-left:15px;
+				position: relative;
+				top: 20px;
 			}
 			#top ul li a:hover{
 				background-color: #1E90FF;
