--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
 				background-color: #1E90FF;
 			}
                         .rbsort{
-				width:304px;height:400px; float: right;margin-right: 5px;background-color: #f5f5f5;
+				width:200;height:400px; float: right;margin-right: 5px;background-color: #f5f5f5;
                          }
 			.bot{
 				margin: 6px;
