--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
 				background-color: #1E90FF;
 			}	
 			.rbsort{width:250px;height:400px; float: right;margin-right:35px;background-color: #f5f5f5;}
-			.videoshow{width:825px;height: 400px; float:right; margin-right:50px;}
+			.videoshow{width:825px;height: 400px;}
 			.bot{
 				margin: 6px;
 				
