--- a/css/index.css
+++ b/css/index.css
@@ -20,8 +20,8 @@
 			#top ul li a:hover{
 				background-color: #1E90FF;
 			}	
-			.rbsort{width:250px;height:400px; float: right;margin-right:35px;background-color: #f5f5f5;}
-			.videoshow{width:825px;height: 400px;}
+			.rbsort{width:225px;height:400px; float: right;margin-right:35px;background-color: #f5f5f5;}
+			.videoshow{width:825px;height: 420px; float:left;margin-left:300px;}
 			.bot{
 				margin: 6px;
 				
