--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
 				background-color: #1E90FF;
 			}	
 			.rbsort{width:100px;height:250px; float: right;margin-right:35px;background-color: #f5f5f5;}
-			.videoshow{width:825px;height: 420px; float:left;margin-left:300px;}
+			.videoshow{width:825px;height: 420px; float:right;margin-right:5px;}
 			.bot{
 				margin: 6px;
 				
