--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@
 			#top ul li a:hover{
 				background-color: #1E90FF;
 			}	
-			.rbsort{width:100px;height:250px; float: right;margin-right:35px;background-color: #f5f5f5;}
+			.rbsort{height:250px; float: right;margin-right:35px;background-color: #f5f5f5;}
 			.videoshow{width:825px;height: 420px; float:right;margin-right:5px;}
 			.bot{
 				margin: 6px;
