--- a/css/index.css
+++ b/css/index.css
@@ -20,8 +20,8 @@
 			#top ul li a:hover{
 				background-color: #1E90FF;
 			}	
-			.rbsort{height:250px; float: right;margin-right:35px;background-color: #f5f5f5;}
-			.videoshow{width:825px;height: 420px; float:right;margin-right:5px;}
+			.rbsort{height:250px; float: right;background-color: #f5f5f5;}
+			.videoshow{width:825px;height: 420px; float:right;border:1px solid;}
 			.bot{
 				margin: 6px;
 				
