--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
 				background-color: #1E90FF;
 			}	
 			.rbsort{height:250px; float: right;background-color: #f5f5f5;}
-			.videoshow{width:825px;height: 420px; float:right;border:1px solid;}
+			.videoshow{width:825px;height: 420px; float:right;}
 			.bot{
 				margin: 6px;
 				
