--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,9 @@
            *{
-				margin: 0;padding: 0;border: 0px;
+				margin: 0;padding: 0;
 			}
+			html{width:1536px;margin: auto;overflow: auto;}
 			#top{overflow: hidden;}
-			#top ul{width: 897px;height:60px;float: right; }
+			#top ul{line-height:60px;float:right;}
 			#top ul li{
 				list-style: none;
 				float:left;	
@@ -13,15 +14,14 @@
 				
 				color:white;
 				padding: 15px 12px 15px 12px;
-				margin-left:15px;
-				position: relative;
-				top: 20px;
+				margin-right: 20px;
+				
 			}
 			#top ul li a:hover{
 				background-color: #1E90FF;
 			}	
-			.rbsort{height:250px; float: right;background-color: #f5f5f5;}
-			.videoshow{width:825px;height: 420px; float:right;}
+			.rbsort{width:225px;height:400px; float: right;margin-right:35px;background-color: #f5f5f5;}
+			.videoshow{width:825px;height: 420px; float:left;margin-left:300px;}
 			.bot{
 				margin: 6px;
 				
@@ -40,17 +40,17 @@
 				color: #1E90FF;				
 			}
 			.easy{width:1100px;}
-			.fl{width:1920;height: 490px;overflow:hidden;}
-			.sp{width:825px;height: 400px;}
+			.fl{width:1520px;height: 490px;overflow:hidden;}
+			.sp{width:835px;height: 420px;}
 			.sp1{
 				width:186px;height:200px;float: left;margin-right: 20px;
 			}
 			.sp2{
-				width: 100%;height: 105px;background-color:#1E90FF ;
+				width: 186px;height: 105px;background-color:#1E90FF ;
 				background-image: url(../img/图一.png);
 			}
 			.sp3{
-				width: 100%;height: 50%;color: #c0c0c0;background-color: white;
+				width: 186px;height: 50%;color: #c0c0c0;background-color: white;
 			}
 			.sp4{width: 100px;height:20px;border: 1px solid;}
 			.sp5{position: relative;bottom: 0px;}
