--- a/css/index2Css.css
+++ b/css/index2Css.css
@@ -1,9 +1,12 @@
          div{
 				margin: 0;padding: 0;
 			}
+			html{width:1536px;margin: auto;overflow: auto;}
 			body{
-				 position: absolute;left: 0;top: 0; right:0; bottom: 0;margin: 0;padding: 0;
+				 width:1536px;height:750px;
+				 overflow:auto;
 			}
+			
 			#top{
 				width: 100%;
 				height:9%;
